# CMake

./: CMakeLists.txt
Main/: CMakeLists.txt
Main/examples/: example_basic.cpp  example_complex.cpp  example_square.cpp
Main/include/: main.h
Main/src/: main.cpp
PrivateLibrary/: CMakeLists.txt
PrivateLibrary/include/: private_lib.h
PrivateLibrary/src/: private_lib.cpp
